--- a/stories2.html
+++ b/stories2.html
@@ -121,31 +121,31 @@
         <h2>Stories</h2>
         <div class="stories-container"></div>
         
-        <a href="story/collection2/">
+        <a href="story/collection2/minal.html">
             <div class="stories-item">
                 <img src="https://i.pinimg.com/564x/0b/a7/c6/0ba7c6ad74e3fad834ae8e083de78c6c.jpg" alt="Adventure Stories">
                 <div class="stories-title">Minal Bani Rakhel</div>
             </div>
         </a>
 
-        <a href="story/collection2/">
+        <a href="story/collection2/padosi.html">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <img src="https://i.pinimg.com/564x/e4/9c/85/e49c8596bf9d1cecb9e90d6cecb1e60e.jpg" alt="Adventure Stories">
+                <div class="stories-title">Padosi ne banaya rakhel</div>
             </div>
         </a>
 
         <a href="story/collection2/">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <img src="https://i.pinimg.com/736x/8b/37/a6/8b37a6764ba5e3561bdd60285133179e.jpg" alt="Adventure Stories">
+                <div class="stories-title">मेरे हवसी बॉस ने माँ को रखैल बना लिया</div>
             </div>
         </a>
 
-        <a href="story/collection2/">
+        <a href="story/collection2/kasai.html">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <img src="https://i.pinimg.com/736x/66/c8/99/66c899988c3b0a5f94dc56d9b01a1227.jpg" alt="Adventure Stories">
+                <div class="stories-title">kasai ki rakhail</div>
             </div>
         </a>
 
