--- a/stories2.html
+++ b/stories2.html
@@ -149,17 +149,17 @@
             </div>
         </a>
 
-        <a href="story/collection2/">
+        <a href="story/collection2/ramola.html">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <img src="https://i.pinimg.com/736x/3e/64/c6/3e64c6e614a97316b8d7e78c744788fa.jpg" alt="Adventure Stories">
+                <div class="stories-title">Ramola ka submission</div>
             </div>
         </a>
 
-        <a href="story/collection2/">
+        <a href="story/collection2/wifegangbang.html">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <div class="stories-title">wife gangbang</div>
             </div>
         </a>
 
