--- a/story/collection2/ramola2.html
+++ b/story/collection2/ramola2.html
@@ -24,6 +24,15 @@
             width: 100%;
             height: auto;
         }
+        .pages {
+            text-align: center;
+            color: red;
+        }
+        .pages a{
+            text-align: center;
+            color: red;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
