--- a/stories2.html
+++ b/stories2.html
@@ -121,6 +121,22 @@
         <h2>Stories</h2>
         <div class="stories-container"></div>
         
+        <a href="story/collection2/entrapment.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/736x/1e/9e/9d/1e9e9d3c2249483950c90046e2fbecc2.jpg" alt="Adventure Stories">
+                <div class="stories-title">entrapment of housewife</div>
+            </div>
+        </a>
+
+        <a href="story/collection2/">
+            <div class="stories-item">
+                <img src="" alt="Adventure Stories">
+                <div class="stories-title"></div>
+            </div>
+        </a>
+
+
+
         <a href="story/collection2/minal.html">
             <div class="stories-item">
                 <img src="https://i.pinimg.com/564x/0b/a7/c6/0ba7c6ad74e3fad834ae8e083de78c6c.jpg" alt="Adventure Stories">
@@ -158,38 +174,26 @@
 
         <a href="story/collection2/wifegangbang.html">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
+                <img src="https://i.pinimg.com/736x/8f/52/6a/8f526abc44fc218f6a51d7fe6d0e1b86.jpg" alt="Adventure Stories">
                 <div class="stories-title">wife gangbang</div>
             </div>
         </a>
 
-        <a href="story/collection2/">
+        <a href="story/collection2/maakaganagbang.html">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <img src="https://i.pinimg.com/736x/56/d4/56/56d456df9860ec0ca9076815b40a0dc2.jpg" alt="Adventure Stories">
+                <div class="stories-title">maa ka gangbang</div>
             </div>
         </a>
 
         <a href="story/collection2/">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
+                <img src="https://i.pinimg.com/736x/1e/9e/9d/1e9e9d3c2249483950c90046e2fbecc2.jpg" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="story/collection2/">
-            <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
-            </div>
-        </a>
-
-        <a href="story/collection2/">
-            <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
-            </div>
-        </a>
+        
 
         <a href="story/collection2/">
             <div class="stories-item">
