--- a/stories2.html
+++ b/stories2.html
@@ -128,6 +128,13 @@
             </div>
         </a>
 
+        <a href="story/collection2/anjalirazia.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/736x/8a/e9/f9/8ae9f980d5b947edf303583a3d529b8a.jpg" alt="Adventure Stories">
+                <div class="stories-title">anjali bani Rajia</div>
+            </div>
+        </a>
+
         <a href="story/collection2/">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
