--- a/story/collection2/wifegangbang.html
+++ b/story/collection2/wifegangbang.html
@@ -28,6 +28,7 @@
 </head>
 <body>
     <div class="post_body scaleimages" id="pid_5300795">
+        <img src="https://i.pinimg.com/736x/25/77/55/2577557055f9ae980a388bd36e330955.jpg" alt="">
 		Ye story sachhi hai mera naam rihan khan hai<br />
 Meri wife ka nam hai naziya pathan hamari nigah<br />
 Ke baad ham.money moon par gaye the wahi <br />
@@ -46,6 +47,7 @@ Aage dekho kya kya hoga naziya ke sath
     <div class="post_body scaleimages" id="pid_5516387">
 		Part 1<br />
 <br />
+<img src="https://i.pinimg.com/736x/91/eb/f3/91ebf3aece3d103994cdf969d0be6c80.jpg" alt="">
 Mai..pls dekho aisa ban kaho meri begam hai <br />
 Admi..ha sale tabhi teri begam ko tere samne nangi karke chodenge aur tum dekhna <br />
 Ye sunate hi meri begam naziya bhagane lagi <br />
@@ -78,7 +80,7 @@ Aunty...ye log saal me 1 baar aate hai kisi ladki ko lekar fir 7 dino tak khoob 
 Mai..pls aunty <br />
 Aunty...are chinta mat karo beta tumahri begam 2 din ke baad kud hi uchal uchal kar chudne la lagegi
 	</div>
-	
+	<img src="https://i.pinimg.com/736x/5a/55/19/5a5519b05d99178dada722a347d926c1.jpg" alt="">
 	<div class="post_body scaleimages" id="pid_5517434">
 		Part 2<br />
 <br />
