--- a/stories2.html
+++ b/stories2.html
@@ -121,6 +121,13 @@
         <h2>Stories</h2>
         <div class="stories-container"></div>
         
+        <a href="story/collection2/10hours.html">
+            <div class="stories-item">
+                <img src="https://i.pinimg.com/736x/c0/48/9c/c0489c01dcea3f789783b4a95ced1ef8.jpg" alt="Adventure Stories">
+                <div class="stories-title">10- hours</div>
+            </div>
+        </a>
+        
         <a href="story/collection2/entrapment.html">
             <div class="stories-item">
                 <img src="https://i.pinimg.com/736x/1e/9e/9d/1e9e9d3c2249483950c90046e2fbecc2.jpg" alt="Adventure Stories">
