--- a/comic.html
+++ b/comic.html
@@ -128,10 +128,10 @@
             </div>
         </a>
 
-        <a href="comic/collection/padosi.html">
+        <a href="https://www.erofus.com/comics/renderotica-comics/skatingjesus/andaroos-chronicles">
             <div class="stories-item">
-                <img src="https://i.pinimg.com/564x/e4/9c/85/e49c8596bf9d1cecb9e90d6cecb1e60e.jpg" alt="Adventure Stories">
-                <div class="stories-title">Padosi ne banaya rakhel</div>
+                <img src="https://www.erofus.com/medium/11871/59fa6452e9e675192149298.jpeg" alt="Adventure Stories">
+                <div class="stories-title">Andaroos Chronicals</div>
             </div>
         </a>
 
