--- a/stories2.html
+++ b/stories2.html
@@ -149,8 +149,6 @@
             </div>
         </a>
 
-
-
         <a href="story/collection2/minal.html">
             <div class="stories-item">
                 <img src="https://i.pinimg.com/564x/0b/a7/c6/0ba7c6ad74e3fad834ae8e083de78c6c.jpg" alt="Adventure Stories">
@@ -200,10 +198,10 @@
             </div>
         </a>
 
-        <a href="story/collection2/">
+        <a href="story/collection2/room29.html">
             <div class="stories-item">
                 <img src="https://i.pinimg.com/736x/1e/9e/9d/1e9e9d3c2249483950c90046e2fbecc2.jpg" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <div class="stories-title">Room - 29</div>
             </div>
         </a>
 
