--- a/comic.html
+++ b/comic.html
@@ -121,10 +121,10 @@
         <h2>comics</h2>
         <div class="stories-container"></div>
         
-        <a href="comic/collection/">
+        <a href="https://www.erofus.com/comics/quoom_com-comics/stories/conquered">
             <div class="stories-item">
                 <img src="https://ctvgkrh.mxodeprmrzoc.hath.network:7878/h/d5f0022009538ba2b73709c3232a527b7d4c3a45-141709-573-697-jpg/keystamp=1731657000-957a6b3f57;fileindex=127528768;xres=org/CONQUERED_part_1_THE_QUEEN_1.jpg" alt="Adventure Stories">
-                <div class="stories-title">Conquered-1</div>
+                <div class="stories-title">Conquered</div>
             </div>
         </a>
 
@@ -135,357 +135,357 @@
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="https://www.erofus.com/comics/renderotica-comics/skatingjesus/peril-in-africa">
             <div class="stories-item">
-                <img src="https://i.pinimg.com/736x/8b/37/a6/8b37a6764ba5e3561bdd60285133179e.jpg" alt="Adventure Stories">
-                <div class="stories-title">मेरे हवसी बॉस ने माँ को रखैल बना लिया</div>
+                <img src="https://www.erofus.com/medium/11873/59fa645358a346188986339.jpeg" alt="Adventure Stories">
+                <div class="stories-title">Peril In Africa</div>
             </div>
         </a>
 
-        <a href="comic/collection/kasai.html">
+        <a href="https://www.erofus.com/comics/renderotica-comics/skatingjesus/art">
             <div class="stories-item">
-                <img src="https://i.pinimg.com/736x/66/c8/99/66c899988c3b0a5f94dc56d9b01a1227.jpg" alt="Adventure Stories">
-                <div class="stories-title">kasai ki rakhail</div>
+                <img src="https://www.erofus.com/medium/85694/6659f8022317b6194144314.jpeg" alt="Adventure Stories">
+                <div class="stories-title">Art</div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="https://www.erofus.com/comics/renderotica-comics/skatingjesus/falling-star">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <img src="https://www.erofus.com/medium/85695/6659f80281f321142231199.jpeg" alt="Adventure Stories">
+                <div class="stories-title">Falling Star</div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="https://www.erofus.com/comics/renderotica-comics/skatingjesus/last-run">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <img src="https://www.erofus.com/medium/11872/59fa64533646a0102486690.jpeg" alt="Adventure Stories">
+                <div class="stories-title">Last Run</div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="https://www.erofus.com/comics/renderotica-comics/skatingjesus/presidential-debate/issue-1">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <img src="https://www.erofus.com/medium/85697/6659f803049554193921773.jpeg" alt="Adventure Stories">
+                <div class="stories-title">Presidential Debate</div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="https://www.erofus.com/comics/renderotica-comics/skatingjesus/target-in-the-ocean">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <img src="https://www.erofus.com/medium/85698/6659f80350df32139789720.jpeg" alt="Adventure Stories">
+                <div class="stories-title">Target In Ocean</div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="https://www.erofus.com/comics/renderotica-comics/skatingjesus/the-fall">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <img src="https://www.erofus.com/medium/85699/6659f8038a68d0107000109.jpeg" alt="Adventure Stories">
+                <div class="stories-title">The Fall</div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="https://www.erofus.com/comics/renderotica-comics/skatingjesus/underground-party">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <img src="https://www.erofus.com/medium/85700/6659f803c8ab20133291114.jpeg" alt="Adventure Stories">
+                <div class="stories-title">underground-party</div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="https://www.erofus.com/comics/renderotica-comics/skatingjesus/welcome-to-garmhaztan">
             <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
+                <img src="https://www.erofus.com/medium/11875/59fa64537c5c19167242963.jpeg" alt="Adventure Stories">
+                <div class="stories-title">welcome-to-garmhaztan</div>
             </div>
         </a>
 
-        <a href="comic/collection/">
-            <div class="stories-item">
-                <img src="" alt="Adventure Stories">
-                <div class="stories-title"></div>
-            </div>
-        </a>
-
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
             </div>
         </a>
 
-        <a href="comic/collection/">
+        <a href="">
+            <div class="stories-item">
+                <img src="" alt="Adventure Stories">
+                <div class="stories-title"></div>
+            </div>
+        </a>
+
+        <a href="">
             <div class="stories-item">
                 <img src="" alt="Adventure Stories">
                 <div class="stories-title"></div>
