--- a/comic.html
+++ b/comic.html
@@ -123,7 +123,7 @@
         
         <a href="https://www.erofus.com/comics/quoom_com-comics/stories/conquered">
             <div class="stories-item">
-                <img src="https://ctvgkrh.mxodeprmrzoc.hath.network:7878/h/d5f0022009538ba2b73709c3232a527b7d4c3a45-141709-573-697-jpg/keystamp=1731657000-957a6b3f57;fileindex=127528768;xres=org/CONQUERED_part_1_THE_QUEEN_1.jpg" alt="Adventure Stories">
+                <img src="https://www.erofus.com/medium/65690/6372830515f954154629868.jpeg" alt="Adventure Stories">
                 <div class="stories-title">Conquered</div>
             </div>
         </a>
